<resources>
    <string name="hello_world">hello_world</string>
    <string name="next_prog_txt">Next: %1$s</string>
    <string name="genre_txt">Genres</string>
    <string name="languages_txt">Languages</string>
    <string name="notification_tags">notification_tags</string>
    <string name="notification_video_url">videoUrl</string>
    <string name="Languages_saved_key">saved_languages</string>
    <string name="share_message">I am Watching #CONTENT_NAME on Shreyas ET and thought you should get on it too! Here is a link to download the app from Playstore and watch great movies on any device of your choice.</string>
    <string name="msg_fav_failed_update">Failed to update favourites data</string>
    <string name="msg_show_less_description">...</string>
    <string name="msg_read_more_description">...</string>
    <string name="navigation_my_downloads">My Downloads</string>
    <string name="download_text">Your video was downloaded successfully go to downloads to watch and other options </string>
    <string name="no_download_text">Your download is in progress</string>
    <string name="navigation_app_settings">App Settings</string>
    <string name="navigation_about">About</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_my_watchlist">My Watchlist</string>
    <string name="notification_download_complete_info">To access the downloaded content, please go to Profile->Downloads.</string>
    <string name="download_error_while_download">Some error occurred during downloading</string>
    <string name="download_started_info">Downloading</string>
    <string name="faq">FAQs</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate this app</string>
    <string name="feedback">Feedback</string>
    <string name="cancel_subscription">Subscriptions</string>
    <string name="empty_subscription">No packs subscribed</string>
    <string name="subscribed_packs">Subscribed Pack</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="account">Account</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="video_quality">Video Quality</string>
    <string name="auto">Auto</string>
    <string name="high_def">High Definition (HD)</string>
    <string name="standard_def">Standard Definition (SD)</string>
    <string name="low_def">Low Definition</string>
    <string name="notification">Notifications</string>
    <string name="auto_play">Autoplay</string>
    <string name="download_on_wifi">Download on wifi only</string>
    <string name="download_location">Download Location</string>
    <string name="download_option_text">1 hour of video around 1 GB of data and storage is used</string>
    <string name="download_option_text_data_saver">For 2.5  Hours of Video around 300 MB of Data and Storage is used</string>
    <string name="download_option_text_good">For 2.5  Hours of Video around 600 MB of Data and Storage is used</string>
    <string name="download_option_text_best">For 2.5  Hours of Video around 1 GB of Data and Storage is used</string>
    <string name="download_option_text_hd">For 2.5  Hours of Video around 3.5 GB of ata and Storage is used</string>
    <string name="vf_txt_download_deleted">Your download has been deleted</string>
    <string name="vf_txt_delete_download">Are you sure do you want to delete this </string>
    <string name="download_status_extracting">Finishing Download...</string>
    <string name="download_status_not_enough_space">Please clear some space to resume download...</string>
    <string name="download_status_failed_acquiring_drm_license">Please relaunch the App to finish download...</string>
    <string name="download_state_failed_generic_text">Oops, something went wrong. Please try again later!</string>
    <string name="download_state_rare_download">A rare error! Do write to us at support</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="txt_download_settings">Downloading</string>
    <string name="downloading">Downloading...</string>
    <string name="player_msg_optimizing_playback">Optimising for best viewing experience, just a second!</string>
    <string name="media_player_error_no_network_drm_session">Sorry, We\'re unable to play content in offline, Please enable the internet and try again</string>
    <string name="vf_download_init_download_message">Initiating download. Please wait.</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset Password</string>
    <string name="is_login_true_text">&amp;loginRequired=true</string>
    <string name="is_login_false_text">&amp;loginRequired=false</string>
    <string name="download_state_failed_text">Failed</string>
    <string name="position">contentposition</string>
    <string name="playhint">play</string>
    <string name="trailerhint">play trailer</string>
    <string name="txt_tnc_on_otp">By continuing you indicate that you have read and agree to the Terms \\u0026 Conditions</string>
    <string name="error_network_not_available">network is not available</string>
    <string name="subscription_required">Subscription Required</string>
    <string name="canot_fetch_url">We’re unable to connect to the TV Channel’s server right now. Please try again a little later.</string>
    <string name="canot_fetch_url_videos">We’re unable to connect to the Video’s server right now. Please try again a little later.</string>
    <string name="reminder_message">Would you like to set a reminder for</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_message_part_press_confirm">\? Press confirm and look out for the
        reminder in your notification bar.</string>
    <string name="reminder_message_already_available_same_program">A reminder is already available for this program </string>
    <string name="reminder_message_already_available">A reminder is already available at this
        time for program </string>
    <string name="reminder_title">Set Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_download_app">Install</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="videoquality">Video Quality</string>
    <string name="language">Language</string>
    <string name="catch_up">Catch-Up</string>
    <string name="episodes">Episodes</string>
    <string name="go_back">Go Back</string>
    <string name="un_subscribe">Unsubscribe</string>
    <string name="progress_message">loading &#8230;</string>
    <string name="notification_livetv_message">Watch Now</string>
    <string name="data_fetch_error">Failed to load data</string>
    <string name="carddetailcommentsection_editcomment">add a comment</string>
    <string name="carddetailsectionheader_loadmore">load more</string>
    <string name="comment_ok_adding">adding..</string>
    <string name="comment_success">Comment has been posted successfully.</string>
    <string name="comment_post_fail">Unable to post your comment.</string>
    <string name="programguide_data_fetch_error">Sorry! The TV Channel you are trying to view is
        unable to send their programme schedule right now</string>
    <string name="otp_submit">Submit</string>
    <string name="use_only_sundirect_network_message">Please use sundirect Mobile data to use </string>
    <string name="feedbackheading">Rate sundirect TV</string>
    <string name="feedbackmessageheading">share your experience </string>
    <string name="feedbackmessagehint">feedback on sundirect TV</string>
    <string name="dev_auth_failed_message">We are unable to authenticate your device. Please relaunch the app </string>
    <string name="termsandconditions">Terms \u0026 Conditions</string>
    <string name="hello">Hello!</string>
    <string name="msg_for_non_sundirect_user_wifi">
         We`ve detected a WiFi connection.\n
        \nPlease open sundirect Play for the first time on your sundirect
internet connection to start your exciting offer.
        \nYou can later enjoy sundirect Play on WiFi or your sundirect internet connection.
    </string>
    <string name="hint_for_non_sundirect_user">*Don\'t worry, sundirect Play works on both wifi
        \u0026 data connection
    </string>
    <string name="exit_text">EXIT</string>
    <string name="continue_text">Start Offer Now!</string>
    <string name="epg_channels_error_txt">Sorry! We are unable to fetch the TV stream right now. Please try again later.</string>
    <string name="search_res_not_found">Searched results not found</string>
    <string name="error_fetch_tvshows">Sorry! We are unable to fetch the TV Shows right now.
        Please try again later.</string>
    <string name="error_fetch_related_vodlist">Sorry! We are unable to fetch the videos list right
        now.
        Please try again later.</string>
    <string name="no_info_available">No information available</string>
    <string name="no_favourite_available">No favourites available</string>
    <string name="no_channels_available">No channels available</string>
    <string name="no_favourites_found">No Favourites Found</string>
    <string name="favourites_suggestion_text">Add few channels to favourites for easier \n and  quicker access</string>
    <string name="search_suggestion_text">Let\'s find your favourite programs</string>
    <string name="second_time_smc_registration_suggestion">Entered mobile number is already registered with\n SMC Numbers. But have 5 unmapped SMC\n Number which is registered on this Mobile Number.\n Would you like to Create new  account for this ? </string>
    <string name="pending_smc_numbers_in_settingspage">You will be logged out to proceed to Register With Us \n to create new account for your unmapped smc</string>
    <string name="move_to_register_button">Move to Register with us</string>
    <string name="download_not_available">sorry, We are unable to download this video</string>
    <string name="download_video_already_downloaded">This video file is already available in downloads</string>
    <string name="notification_download_complete">Download Completed</string>
    <string name="notification_download_failed">Download Failed</string>
    <string name="vf_download_error_while_download">Sorry! We are unable to fetch the videos list right now. Please try again later.</string>
    <string name="download_started">Your download has been started</string>
    <string name="download_error_network_failure">Download Request has failed, Please check your
        WIFI is
        turned on.</string>
    <string name="download_error_invalid_link">Can only download HTTP/HTTPS links, please try again</string>
    <string name="view_all">See all</string>
    <string name="forgot_password">Forgot?</string>
    <string name="otp_info_abt_security">Note: These details will be shared with our partners so that you can enjoy content on multiple devices like Laptop, TV, etc.</string>
    <string name="otp_msg_hint_mobile_no">eg: 90000 00000</string>
    <string name="otp_msg_hint_email">abcdefgh@gmail.com</string>
    <string name="otp_mobileno_continue">Continue</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="text_parental_text">Parental Control</string>
    <string name="parental_text_off">Off</string>
    <string name="parental_text_all_content">All Content (PIN required for all content)</string>
    <string name="parental_text_adult_content">Adult Only (PIN required for 18+ content)</string>
    <string name="about">About</string>
    <string name="ticket_support">Ticket Support</string>
    <string name="done">Done</string>
    <string name="subscription_weblink">www.sundirect.in</string>
    <string name="subscription_text_popup">Please visit\nSun Direct Website\nto Subscribe</string>
</resources>