<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_video_playback_quality"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_2"
                android:paddingLeft="@dimen/margin_20"
                android:text="@string/video_quality"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_video_playback_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:paddingLeft="@dimen/margin_20"
                android:text="@string/auto"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text"
                android:textSize="@dimen/textsize_14" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_gap_48"
            android:layout_marginStart="@dimen/margin_gap_48"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_20"
            android:visibility="gone"
            >

            <RadioButton
                android:id="@+id/radio_button_quality_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_app_setting_radio_button"
                android:padding="@dimen/dimen_15_dp"
                android:text="@string/auto"
                android:textSize="@dimen/textsize_14"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text" />

            <RadioButton
                android:id="@+id/radio_button_quality_hd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_app_setting_radio_button"
                android:padding="@dimen/dimen_15_dp"
                android:textSize="@dimen/textsize_14"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:text="@string/high_def"
                android:textColor="@color/static_help_text" />

            <RadioButton
                android:id="@+id/radio_button_quality_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_app_setting_radio_button"
                android:padding="@dimen/dimen_15_dp"
                android:textSize="@dimen/textsize_14"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:text="@string/standard_def"
                android:textColor="@color/static_help_text" />

            <RadioButton
                android:id="@+id/radio_button_quality_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_app_setting_radio_button"
                android:padding="@dimen/dimen_15_dp"
                android:text="@string/low_def"
                android:textSize="@dimen/textsize_14"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginRight="@dimen/dimen_15_dp"
            android:background="@color/divider_color" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="@dimen/margin_20"
            android:paddingRight="@dimen/margin_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/notification"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text"
                android:textSize="@dimen/textsize_14" />

            <CheckBox
                android:id="@+id/checkbox_notification_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/bg_app_setting_checkbox"
                android:button="@android:color/transparent" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginRight="@dimen/dimen_15_dp"
            android:background="@color/divider_color" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="@dimen/margin_20"
            android:paddingRight="@dimen/margin_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/auto_play"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text"
                android:textSize="@dimen/textsize_14" />

            <CheckBox
                android:id="@+id/checkbox_auto_play_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/bg_app_setting_checkbox"
                android:button="@android:color/transparent" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginRight="@dimen/dimen_15_dp"
            android:background="@color/divider_color" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"
            android:paddingLeft="@dimen/margin_20"
            android:paddingRight="@dimen/margin_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/download_on_wifi"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text"
                android:textSize="@dimen/textsize_14" />

            <CheckBox
                android:id="@+id/checkbox_download_on_wifi_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/bg_app_setting_checkbox"
                android:button="@android:color/transparent" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginRight="@dimen/dimen_15_dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/text_download_location"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/download_location"
            android:textAppearance="@style/TextAppearance.NormalFontRegular"
            android:textColor="@color/static_help_text"
            android:textSize="@dimen/textsize_14"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginRight="@dimen/dimen_15_dp"
            android:background="@color/divider_color"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linear_parental_control"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_2"
                android:paddingLeft="@dimen/margin_20"
                android:text="@string/text_parental_text"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/text_parental_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:paddingLeft="@dimen/margin_20"
                android:text="@string/parental_text_off"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text"
                android:textSize="@dimen/textsize_14" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_parental_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_gap_48"
            android:layout_marginStart="@dimen/margin_gap_48"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_20"
            android:visibility="gone"
            >

            <RadioButton
                android:id="@+id/radio_button_parental_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_app_setting_radio_button"
                android:padding="@dimen/dimen_15_dp"
                android:text="@string/parental_text_off"
                android:textSize="@dimen/textsize_14"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/static_help_text" />

            <RadioButton
                android:id="@+id/radio_button_parental_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_app_setting_radio_button"
                android:padding="@dimen/dimen_15_dp"
                android:textSize="@dimen/textsize_14"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:text="@string/parental_text_all_content"
                android:textColor="@color/static_help_text" />

            <RadioButton
                android:id="@+id/radio_button_parental_adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_app_setting_radio_button"
                android:padding="@dimen/dimen_15_dp"
                android:textSize="@dimen/textsize_14"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:text="@string/parental_text_adult_content"
                android:textColor="@color/static_help_text" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginRight="@dimen/dimen_15_dp"
            android:background="@color/divider_color"
            android:visibility="visible" />
        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.NormalFontRegular"
            android:textColor="@color/static_help_text"
            android:textSize="@dimen/textsize_14" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginRight="@dimen/dimen_15_dp"
            android:background="@color/divider_color" />


    </LinearLayout>
</ScrollView>